Added Custom to Embedded Search form.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/config/install/field.storage.paragraph.field_paragraph_search_block.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_search_block.yml
@@ -12,13 +12,16 @@ settings:
   allowed_values:
     -
       value: none
-      label: None
+      label: 'Full site search'
     -
       value: event
       label: Events
     -
       value: news
       label: News
+    -
+      value: custom
+      label: Custom
   allowed_values_function: ''
 module: options
 locked: false
