--- a/config/install/core.entity_form_display.paragraph.embedded_search_form.default.yml
+++ b/config/install/core.entity_form_display.paragraph.embedded_search_form.default.yml
@@ -3,9 +3,10 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.embedded_search_form.field_paragraph_search_block
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_ph
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_target
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_url
     - paragraphs.paragraphs_type.embedded_search_form
-  module:
-    - content_moderation
 id: paragraph.embedded_search_form.default
 targetEntityType: paragraph
 bundle: embedded_search_form
@@ -16,6 +17,29 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_paragraph_search_ph:
+    weight: 103
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_paragraph_search_target:
+    weight: 104
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_paragraph_search_url:
+    weight: 102
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
