--- a/config/install/core.entity_view_display.paragraph.embedded_search_form.default.yml
+++ b/config/install/core.entity_view_display.paragraph.embedded_search_form.default.yml
@@ -3,6 +3,9 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.embedded_search_form.field_paragraph_search_block
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_ph
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_target
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_url
     - paragraphs.paragraphs_type.embedded_search_form
   module:
     - options
@@ -17,5 +20,30 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_paragraph_search_ph:
+    weight: 2
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_paragraph_search_target:
+    weight: 3
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_paragraph_search_url:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
 hidden: {  }
