--- a/config/install/core.entity_form_display.paragraph.card_promotion_auto.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_promotion_auto.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.card_promotion_auto.field_paragraph_display_topic
     - field.field.paragraph.card_promotion_auto.field_paragraph_cta_text
     - field.field.paragraph.card_promotion_auto.field_paragraph_reference
     - paragraphs.paragraphs_type.card_promotion_auto
@@ -12,6 +13,13 @@ targetEntityType: paragraph
 bundle: card_promotion_auto
 mode: default
 content:
+  field_paragraph_display_topic:
+    weight: 106
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_paragraph_cta_text:
     weight: 105
     settings:
