--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -160,6 +160,7 @@ config_devel:
     - field.field.paragraph.card_promotion.field_paragraph_summary
     - field.field.paragraph.card_promotion.field_paragraph_title
     - field.field.paragraph.card_promotion.field_paragraph_topic
+    - field.field.paragraph.card_promotion_auto.field_paragraph_display_topic.yml
     - field.field.paragraph.card_promotion_auto.field_paragraph_reference
     - field.field.paragraph.card_promotion_auto.field_paragraph_cta_text
     - field.field.paragraph.complex_image.field_complex_image_data
@@ -215,6 +216,7 @@ config_devel:
     - field.storage.block_content.field_gallery_featured_image
     - field.storage.block_content.field_gallery_media
     - field.storage.block_content.field_block_embedded_video
+    - field.storage.paragraph.field_paragraph_display_topic.yml
     - field.storage.paragraph.field_paragraph_media_gallery
     - field.storage.node.field_landing_page_c_secondary
     - field.storage.node.field_landing_page_c_primary
