SDPA-3993 Updates Call to action component
Updates Call to action component to enable WYSIWYG.

--- a/config/install/field.field.paragraph.call_to_action.field_paragraph_body.yml
+++ b/config/install/field.field.paragraph.call_to_action.field_paragraph_body.yml
@@ -9,7 +9,7 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    plain_text: plain_text
+    plain_text: '0'
     rich_text: '0'
     admin_text: '0'
 id: paragraph.call_to_action.field_paragraph_body
