--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -56,6 +56,7 @@ settings:
       latest_events: latest_events
       card_carousel: card_carousel
       timelines: timelines
+      news_listing: news_listing
     target_bundles_drag_drop:
       banner:
         weight: -33
