Hide paragraph labels

--- a/tide_landing_page.libraries.yml
+++ b/tide_landing_page.libraries.yml
@@ -2,3 +2,7 @@ landing_page_form:
   css:
     theme:
       css/landing_page.css: {}
+  js:
+    js/hide_elements.js: {}
+  dependencies:
+    - core/jquery
