--- a/config/install/core.entity_form_display.paragraph.keydates.default.yml
+++ b/config/install/core.entity_form_display.paragraph.keydates.default.yml
@@ -24,14 +24,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_paragraph_link:
-    weight: 4
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_paragraph_summary:
     type: string_textarea
     weight: 3
@@ -63,6 +55,7 @@ content:
     region: content
     third_party_settings: {  }
 hidden:
+  field_paragraph_link: true
   created: true
   status: true
   uid: true
