--- a/config/install/core.entity_form_display.paragraph.keydates.default.yml
+++ b/config/install/core.entity_form_display.paragraph.keydates.default.yml
@@ -33,7 +33,7 @@ content:
     third_party_settings:
       maxlength:
         maxlength_js: 200
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_label: 'A brief description of the public holiday or special date. Max @limit characters, remaining: <strong>@remaining</strong>'
         maxlength_js_enforce: false
         maxlength_js_truncate_html: false
     region: content
@@ -45,7 +45,7 @@ content:
     third_party_settings:
       maxlength:
         maxlength_js: 150
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_label: 'Title of the public holiday or special date. Max @limit characters, preferred <70 characters; remaining: <strong>@remaining</strong>'
     type: string_textfield
     region: content
   moderation_state:
