--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
+    - field.field.paragraph.card_event.field_paragraph_status
     - field.field.paragraph.card_event.field_paragraph_summary
     - field.field.paragraph.card_event.field_paragraph_title
     - field.field.paragraph.card_event.field_paragraph_topic
@@ -56,6 +57,14 @@ content:
       field_widget_replace: false
     third_party_settings: {  }
     type: entity_browser_entity_reference
+    region: content
+  field_paragraph_status:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_paragraph_summary:
     type: string_textarea
