--- a/config/install/field.field.paragraph.keydates.field_paragraph_keydate.yml
+++ b/config/install/field.field.paragraph.keydates.field_paragraph_keydate.yml
@@ -8,7 +8,7 @@ id: paragraph.keydates.field_paragraph_keydate
 field_name: field_paragraph_keydate
 entity_type: paragraph
 bundle: keydates
-label: 'Key Dates'
+label: 'Date'
 description: "The date or date range you'd like displayed (eg 1 January 2021; 2 April to 5 April 2020). No abbreviations or punctuation. Use ‘to’ (not a dash) to separate a date span."
 required: true
 translatable: false
