[SDPA-4451]CMS UI improvement - paragraph labels (#98)
* Hide paragraph labels

* hides field_paragraph_link field.

* Changes submit button value

* Hides CTA title

* Changes CTA link and title

* remove field_paragraph_link

* changes help text

* Changes field_paragraph_cta help text

* add an hook update to update help text

* Changes the label of field_paragraph_keydate

* Update hide_elements.js

* updates hook update

* updates node_form alter

* Update js to hide CTA

--- a/config/install/field.field.paragraph.keydates.field_paragraph_keydate.yml
+++ b/config/install/field.field.paragraph.keydates.field_paragraph_keydate.yml
@@ -8,8 +8,8 @@ id: paragraph.keydates.field_paragraph_keydate
 field_name: field_paragraph_keydate
 entity_type: paragraph
 bundle: keydates
-label: 'Key Dates'
-description: ''
+label: 'Date'
+description: "The date or date range you'd like displayed (eg 1 January 2021; 2 April to 5 April 2020). No abbreviations or punctuation. Use ‘to’ (not a dash) to separate a date span."
 required: true
 translatable: false
 default_value: {  }
