--- a/config/install/core.entity_form_display.paragraph.keydates.default.yml
+++ b/config/install/core.entity_form_display.paragraph.keydates.default.yml
@@ -24,14 +24,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_paragraph_link:
-    weight: 4
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_paragraph_summary:
     type: string_textarea
     weight: 3
@@ -41,7 +33,7 @@ content:
     third_party_settings:
       maxlength:
         maxlength_js: 200
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_label: 'A brief description of the public holiday or special date. Max @limit characters, remaining: <strong>@remaining</strong>'
         maxlength_js_enforce: false
         maxlength_js_truncate_html: false
     region: content
@@ -53,7 +45,7 @@ content:
     third_party_settings:
       maxlength:
         maxlength_js: 150
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_label: 'Title of the public holiday or special date. Max @limit characters, preferred <70 characters; remaining: <strong>@remaining</strong>'
     type: string_textfield
     region: content
   moderation_state:
@@ -63,6 +55,7 @@ content:
     region: content
     third_party_settings: {  }
 hidden:
+  field_paragraph_link: true
   created: true
   status: true
   uid: true
