--- a/config/install/core.entity_view_display.paragraph.introduction_banner.default.yml
+++ b/config/install/core.entity_view_display.paragraph.introduction_banner.default.yml
@@ -2,17 +2,51 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.introduction_banner.field_banner_display_type
+    - field.field.paragraph.introduction_banner.field_banner_type
+    - field.field.paragraph.introduction_banner.field_call_to_action_title
+    - field.field.paragraph.introduction_banner.field_paragraph_body
     - field.field.paragraph.introduction_banner.field_paragraph_links
     - field.field.paragraph.introduction_banner.field_paragraph_summary
     - field.field.paragraph.introduction_banner.field_paragraph_title
     - paragraphs.paragraphs_type.introduction_banner
   module:
     - link
+    - text
 id: paragraph.introduction_banner.default
 targetEntityType: paragraph
 bundle: introduction_banner
 mode: default
 content:
+  field_banner_display_type:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_banner_type:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_call_to_action_title:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_paragraph_body:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_paragraph_links:
     weight: 2
     label: above
