--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -18,6 +18,7 @@ dependencies:
     - paragraphs.paragraphs_type.card_promotion
     - paragraphs.paragraphs_type.card_promotion_auto
     - paragraphs.paragraphs_type.complex_image
+    - paragraphs.paragraphs_type.form_embed_openforms
     - paragraphs.paragraphs_type.latest_events
     - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.timelines
@@ -115,12 +116,15 @@ settings:
       embedded_webform:
         enabled: true
         weight: 22
-      featured_news:
+      form_embed_openforms:
         enabled: true
         weight: 23
-      news_listing:
+      featured_news:
         enabled: true
         weight: 24
+      news_listing:
+        enabled: true
+        weight: 25
       media_gallery:
         enabled: true
         weight: 26
