--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -46,6 +46,7 @@ config_devel:
     - core.entity_form_display.paragraph.card_promotion_auto.default
     - core.entity_form_display.paragraph.complex_image.default
     - core.entity_form_display.paragraph.embedded_search_form.default
+    - core.entity_form_display.paragraph.form_embed_openforms.default
     - core.entity_form_display.paragraph.key_journeys.default
     - core.entity_form_display.paragraph.keydates.default
     - core.entity_form_display.paragraph.latest_events.default
@@ -74,6 +75,7 @@ config_devel:
     - core.entity_view_display.paragraph.card_promotion.default
     - core.entity_view_display.paragraph.complex_image.default
     - core.entity_view_display.paragraph.embedded_search_form.default
+    - core.entity_view_display.paragraph.form_embed_openforms.default
     - core.entity_view_display.paragraph.hero_banner_with_cta.default
     - core.entity_view_display.paragraph.introduction_banner.default
     - core.entity_view_display.paragraph.keydates.default
@@ -174,6 +176,7 @@ config_devel:
     - field.field.paragraph.embedded_search_form.field_paragraph_search_ph
     - field.field.paragraph.embedded_search_form.field_paragraph_search_target
     - field.field.paragraph.embedded_search_form.field_paragraph_search_url
+    - field.field.paragraph.form_embed_openforms.field_form_link
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_background_image
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_cta
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_freetext
@@ -244,6 +247,7 @@ config_devel:
     - field.storage.paragraph.field_complex_image_media
     - field.storage.paragraph.field_complex_image_source
     - field.storage.paragraph.field_complex_image_title
+    - field.storage.paragraph.field_form_link
     - field.storage.paragraph.field_paragraph_date
     - field.storage.paragraph.field_paragraph_freetext
     - field.storage.paragraph.field_paragraph_location
@@ -282,6 +286,8 @@ config_devel:
     - paragraphs.paragraphs_type.card_promotion_auto
     - paragraphs.paragraphs_type.complex_image
     - paragraphs.paragraphs_type.embedded_search_form
+    - paragraphs.paragraphs_type.embedded_webform
+    - paragraphs.paragraphs_type.form_embed_openforms
     - paragraphs.paragraphs_type.hero_banner_with_cta
     - paragraphs.paragraphs_type.introduction_banner
     - paragraphs.paragraphs_type.key_journeys
@@ -317,5 +323,4 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--keydates
     - jsonapi_extras.jsonapi_resource_config.paragraph--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--social_link
-    - paragraphs.paragraphs_type.embedded_webform
     - paragraphs.paragraphs_type.news_listing
