[SDPA-4489] Added the field to json api and behat test for the field.

--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -317,6 +317,7 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_navigation_featured
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_promotion
     - jsonapi_extras.jsonapi_resource_config.paragraph--featured_news
+    - jsonapi_extras.jsonapi_resource_config.paragraph--form_embed_openforms
     - jsonapi_extras.jsonapi_resource_config.paragraph-.hero_banner_with_cta
     - jsonapi_extras.jsonapi_resource_config.paragraph--introduction_banner
     - jsonapi_extras.jsonapi_resource_config.paragraph--key_journeys
