Feature/adds addtional fields (#102)
* export basic yml configs

* adds extra fields to Introduction banner

* updates .module and .install

1. re-order entity_form_display.paragraph.introduction_banner.default
2. add tide_landing_page_update_8026 for re-order the entity_form_display
3. add states api to the form

* Change labels as required.

--- a/config/install/core.entity_view_display.paragraph.introduction_banner.default.yml
+++ b/config/install/core.entity_view_display.paragraph.introduction_banner.default.yml
@@ -2,19 +2,52 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.introduction_banner.field_banner_display_type
+    - field.field.paragraph.introduction_banner.field_banner_type
+    - field.field.paragraph.introduction_banner.field_call_to_action_title
+    - field.field.paragraph.introduction_banner.field_paragraph_body
     - field.field.paragraph.introduction_banner.field_paragraph_links
-    - field.field.paragraph.introduction_banner.field_paragraph_summary
     - field.field.paragraph.introduction_banner.field_paragraph_title
     - paragraphs.paragraphs_type.introduction_banner
   module:
     - link
+    - text
 id: paragraph.introduction_banner.default
 targetEntityType: paragraph
 bundle: introduction_banner
 mode: default
 content:
-  field_paragraph_links:
+  field_banner_display_type:
+    type: list_default
+    weight: 3
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_banner_type:
+    type: list_default
     weight: 2
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_call_to_action_title:
+    type: string
+    weight: 4
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_paragraph_body:
+    type: text_default
+    weight: 1
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_paragraph_links:
+    weight: 5
     label: above
     settings:
       trim_length: 80
@@ -24,13 +57,6 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-    region: content
-  field_paragraph_summary:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
     region: content
   field_paragraph_title:
     weight: 0
