--- a/config/install/core.entity_form_display.paragraph.introduction_banner.default.yml
+++ b/config/install/core.entity_form_display.paragraph.introduction_banner.default.yml
@@ -2,42 +2,61 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.introduction_banner.field_banner_display_type
+    - field.field.paragraph.introduction_banner.field_banner_type
+    - field.field.paragraph.introduction_banner.field_call_to_action_title
+    - field.field.paragraph.introduction_banner.field_paragraph_body
     - field.field.paragraph.introduction_banner.field_paragraph_links
-    - field.field.paragraph.introduction_banner.field_paragraph_summary
     - field.field.paragraph.introduction_banner.field_paragraph_title
     - paragraphs.paragraphs_type.introduction_banner
   module:
     - content_moderation
     - link
     - maxlength
+    - text
 id: paragraph.introduction_banner.default
 targetEntityType: paragraph
 bundle: introduction_banner
 mode: default
 content:
-  field_paragraph_links:
+  field_banner_display_type:
     weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
+  field_banner_type:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_call_to_action_title:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_paragraph_body:
+    weight: 1
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
+  field_paragraph_links:
+    weight: 5
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
-  field_paragraph_summary:
-    weight: 2
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 200
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-        maxlength_js_enforce: false
-        maxlength_js_truncate_html: false
-    type: string_textarea
-    region: content
   field_paragraph_title:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
