--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - entity_browser.browser.tide_image_browser
     - field.field.paragraph.card_event.field_paragraph_cta
+    - field.field.paragraph.card_event.field_paragraph_date
     - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
@@ -24,7 +25,7 @@ bundle: card_event
 mode: default
 content:
   field_paragraph_cta:
-    weight: 6
+    weight: 5
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -32,13 +33,13 @@ content:
     type: link_default
     region: content
   field_paragraph_date_range:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
     region: content
   field_paragraph_location:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: address_default
@@ -59,16 +60,16 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_paragraph_status:
-    weight: 8
+    type: string_textfield
+    weight: 7
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_paragraph_summary:
     type: string_textarea
-    weight: 5
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -88,16 +89,18 @@ content:
     type: string_textfield
     region: content
   field_paragraph_topic:
-    weight: 7
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
 hidden:
   created: true
+  field_paragraph_date: true
   moderation_state: true
   status: true
   uid: true
