Added new field to json api

--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--card_event.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--card_event.yml
@@ -210,3 +210,11 @@ resourceFields:
     disabled: false
     advancedOptionsIcon: ''
     enhancer_label: ''
+  field_paragraph_status:
+    fieldName: field_paragraph_status
+    publicName: field_paragraph_status
+    enhancer:
+      id: ''
+    disabled: false
+    advancedOptionsIcon: ''
+    enhancer_label: ''
