--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "require": {
         "dpc-sdp/tide_core": "^1.5.8",
         "dpc-sdp/tide_event": "^1.3.1",
-        "dpc-sdp/tide_media": "^1.5.1",
-        "dpc-sdp/tide_automated_listing": "dev-feature/SDPA-4541-updates"
+        "dpc-sdp/tide_media": "^1.5.1"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
@@ -18,11 +17,6 @@
         "drupal": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
-        },
-        "dpc-sdp/tide_automated_listing": {
-            "type": "vcs",
-            "no-api": true,
-            "url": "https://github.com/dpc-sdp/tide_automated_listing.git"
         }
     }
 }
