Added tide_automated_listing as a dependency of landing page display so that tide_automated_listing is installed first before the config can be activated

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -25,6 +25,7 @@ dependencies:
     - paragraphs.paragraphs_type.timelines
   module:
     - entity_reference_revisions
+    - tide_automated_listing
 id: node.landing_page.field_landing_page_component
 field_name: field_landing_page_component
 entity_type: node
