--- a/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
@@ -308,6 +308,12 @@ resourceFields:
     disabled: false
     advancedOptionsIcon: ''
     enhancer_label: ''
+  field_node_display_headings:
+    fieldName: field_node_display_headings
+    publicName: field_node_display_headings
+    enhancer:
+      id: ''
+    disabled: false
   field_node_primary_site:
     fieldName: field_node_primary_site
     publicName: field_node_primary_site
