[SDPA-4582] Updated info file.

--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -105,6 +105,7 @@ config_devel:
     - field.field.node.landing_page.field_featured_image
     - field.field.node.landing_page.field_graphical_image
     - field.field.node.landing_page.field_bottom_graphical_image
+    - field.field.node.landing_page.field_display_headings
     - field.field.node.landing_page.field_landing_page_hero_image
     - field.field.node.landing_page.field_landing_page_hero_theme
     - field.field.node.landing_page.field_landing_page_c_primary
