--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "require": {
         "dpc-sdp/tide_core": "^1.6.11",
         "dpc-sdp/tide_event": "^1.3.1",
-        "dpc-sdp/tide_media": "^1.5.1",
-        "dpc-sdp/tide_automated_listing": "dev-feature/SDPA-4541-updates"
+        "dpc-sdp/tide_media": "^1.5.1"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
         "dpc-sdp/tide_webform:^1.2.4": "Allows to use questionnaires",
-        "dpc-sdp/tide_news:^1.1.5": "News content type and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_news:^1.1.5": "News content type and related configuration for Tide Drupal 8 distribution",
+        "dpc-sdp/tide_automated_listing:dev-feature/SDPA-4541-updates": "Allows to use tide automated listing"
     },
     "repositories": {
         "drupal": {
