--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - drupal:datetime_range
   - drupal:field
   - drupal:link
+  - drupal:link_field_autocomplete_filter
   - drupal:menu_ui
   - drupal:node
   - drupal:path
