[SDPA-4667] Added new paragraph type to json and landing_page_component.

--- a/config/install/field.storage.paragraph.field_card_display_style.yml
+++ b/config/install/field.storage.paragraph.field_card_display_style.yml
@@ -17,14 +17,8 @@ settings:
       value: thumbnail
       label: Thumbnail
     -
-      value: featured
-      label: Featured
-    -
-      value: no_image
-      label: Featured
-    -
       value: profile
-      label: Featured
+      label: Profile
   allowed_values_function: ''
 module: options
 locked: false
