--- a/config/install/field.field.paragraph.navigation_card.field_customise.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_customise.yml
@@ -17,6 +17,6 @@ default_value:
     value: 0
 default_value_callback: ''
 settings:
-  on_label: 'On'
+  on_label: 'Show topic and category'
   off_label: 'Off'
 field_type: boolean
