--- a/config/install/field.field.paragraph.navigation_card.field_paragraph_title.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_paragraph_title.yml
@@ -9,7 +9,7 @@ field_name: field_paragraph_title
 entity_type: paragraph
 bundle: navigation_card
 label: Title
-description: ''
+description: 'This title will be displayed as the primary call-to-action on the card.'
 required: true
 translatable: true
 default_value: {  }
