--- a/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
+++ b/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
@@ -27,7 +27,7 @@ content:
   field_customise:
     weight: 5
     settings:
-      display_label: true
+      display_label: false
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
