[SDPA-4667] Added promotion crad to landing page component.

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -21,6 +21,7 @@ dependencies:
     - paragraphs.paragraphs_type.form_embed_openforms
     - paragraphs.paragraphs_type.latest_events
     - paragraphs.paragraphs_type.media_gallery
+    - paragraphs.paragraphs_type.promotion_card
     - paragraphs.paragraphs_type.timelines
   module:
     - entity_reference_revisions
@@ -59,6 +60,7 @@ settings:
       card_carousel: card_carousel
       timelines: timelines
       news_listing: news_listing
+      promotion_card: promotion_card
     target_bundles_drag_drop:
       banner:
         weight: -33
@@ -147,6 +149,9 @@ settings:
       phone:
         weight: 38
         enabled: false
+      promotion_card:
+        enabled: true
+        weight: 39
       social_link:
         weight: 40
         enabled: false
