--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^1.6.11",
+        "dpc-sdp/tide_core": "dev-feature/TVD-171-Event-content-type-updates",
         "dpc-sdp/tide_event": "^1.3.1",
         "dpc-sdp/tide_media": "^1.5.1"
     },
