--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/TVD-171-Event-content-type-updates",
+        "dpc-sdp/tide_core": "dev-feature/TVD-171-Event-content-type-updates as 1.6.13",
         "dpc-sdp/tide_event": "^1.3.1",
-        "dpc-sdp/tide_media": "^1.7.1"
+        "dpc-sdp/tide_media": "^1.5.1"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
