--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -298,6 +298,8 @@ config_devel:
     - paragraphs.paragraphs_type.phone
     - paragraphs.paragraphs_type.social_link
     - paragraphs.paragraphs_type.timelines
+    - field.field.node.event.field_parent_event
+    - field.storage.node.field_parent_event
   optional:
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
