[SDPA-4660] Added lint fix.

--- a/config/install/field.storage.paragraph.field_nav_card_display_style.yml
+++ b/config/install/field.storage.paragraph.field_nav_card_display_style.yml
@@ -11,8 +11,8 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: standard
-      label: Standard
+      value: noImage
+      label: No image
     -
       value: thumbnail
       label: Thumbnail
