--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -23,7 +23,7 @@ dependencies:
   - maxlength:maxlength
   - paragraphs:paragraphs
   - smart_trim:smart_trim
-  - link_field_autocomplete_filter
+  - link_field_autocomplete_filter:link_field_autocomplete_filter
 config_devel:
   install:
     - block_content.type.campaign
