--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--promotion_card.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--promotion_card.yml
@@ -108,7 +108,7 @@ resourceFields:
     fieldName: field_paragraph_link
     publicName: field_paragraph_link
     enhancer:
-      id: 'card_link_enhancer'
+      id: card_link_enhancer
     disabled: false
   field_paragraph_media:
     fieldName: field_paragraph_media
