--- a/config/install/field.field.paragraph.promotion_card.field_paragraph_link.yml
+++ b/config/install/field.field.paragraph.promotion_card.field_paragraph_link.yml
@@ -33,7 +33,7 @@ entity_type: paragraph
 bundle: promotion_card
 label: Link
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
