--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -22,6 +22,7 @@ dependencies:
     - paragraphs.paragraphs_type.latest_events
     - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.timelines
+    - paragraphs.paragraphs_type.featured_news
   module:
     - entity_reference_revisions
 id: node.landing_page.field_landing_page_component
@@ -59,6 +60,7 @@ settings:
       card_carousel: card_carousel
       timelines: timelines
       news_listing: news_listing
+      featured_news: featured_news
     target_bundles_drag_drop:
       banner:
         weight: -33
