--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "dpc-sdp/tide_core": "^1.6.11",
         "dpc-sdp/tide_event": "^1.3.1",
-        "dpc-sdp/tide_media": "^1.5.1"
+        "dpc-sdp/tide_media": "^1.5.1",
+        "dpc-sdp/tide_news": "^1.2.2"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
