--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
         "dpc-sdp/tide_webform:^1.2.4": "Allows to use questionnaires",
         "dpc-sdp/tide_news:^1.1.5": "News content type and related configuration for Tide Drupal 8 distribution",
-        "dpc-sdp/tide_automated_listing:dev-develop#v1.0.2-alpha": "Allows to use tide automated listing"
+        "dpc-sdp/tide_automated_listing:dev-release/1.x-alpha#v1.0.2-alpha": "Allows to use tide automated listing"
     },
     "repositories": {
         "drupal": {
