[release/1.2.x-alpha] Updated landing page component configs.

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -7,6 +7,7 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.basic_text
     - paragraphs.paragraphs_type.call_to_action
+    - paragraphs.paragraphs_type.automated_card_listing
     - paragraphs.paragraphs_type.card_carousel
     - paragraphs.paragraphs_type.card_event
     - paragraphs.paragraphs_type.card_event_auto
@@ -59,6 +60,7 @@ settings:
       card_carousel: card_carousel
       timelines: timelines
       news_listing: news_listing
+      automated_card_listing: automated_card_listing
     target_bundles_drag_drop:
       banner:
         weight: -33
@@ -69,6 +71,9 @@ settings:
       accordion:
         enabled: true
         weight: -31
+      automated_card_listing:
+        enabled: true
+        weight: -30
       card_event:
         enabled: true
         weight: -30
