--- a/config/install/field.field.paragraph.promotion_card.field_promo_card_display_style.yml
+++ b/config/install/field.field.paragraph.promotion_card.field_promo_card_display_style.yml
@@ -16,7 +16,7 @@ required: true
 translatable: false
 default_value:
   -
-    value: standard
+    value: thumbnail
 default_value_callback: ''
 settings: {  }
 field_type: list_string
