--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -40,8 +40,6 @@ settings:
       basic_text: basic_text
       accordion: accordion
       card_event: card_event
-      card_promotion: card_promotion
-      card_promotion_auto: card_promotion_auto
       card_keydates: card_keydates
       call_to_action: call_to_action
       complex_image: complex_image
@@ -69,10 +67,10 @@ settings:
         enabled: true
         weight: -30
       card_promotion:
-        enabled: true
+        enabled: false
         weight: -29
       card_promotion_auto:
-        enabled: true
+        enabled: false
         weight: -28
       complex_image:
         enabled: true
