Updated field labels introduced by SDPA-3620.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/config/install/field.field.node.landing_page.field_featured_image.yml
+++ b/config/install/field.field.node.landing_page.field_featured_image.yml
@@ -9,7 +9,7 @@ id: node.landing_page.field_featured_image
 field_name: field_featured_image
 entity_type: node
 bundle: landing_page
-label: 'Feature Image'
+label: 'Feature image'
 description: ''
 required: false
 translatable: true
