--- a/config/install/field.field.node.landing_page.field_landing_page_bg_colour.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_bg_colour.yml
@@ -10,7 +10,7 @@ id: node.landing_page.field_landing_page_bg_colour
 field_name: field_landing_page_bg_colour
 entity_type: node
 bundle: landing_page
-label: 'Background Colour'
+label: 'Background colour'
 description: ''
 required: true
 translatable: false
