--- a/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
@@ -10,7 +10,7 @@ id: node.landing_page.field_landing_page_c_secondary
 field_name: field_landing_page_c_secondary
 entity_type: node
 bundle: landing_page
-label: 'Secondary Campaign'
+label: 'Secondary campaign'
 description: ''
 required: false
 translatable: false
