--- a/config/install/field.field.node.landing_page.field_landing_page_hero_theme.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_hero_theme.yml
@@ -10,8 +10,8 @@ id: node.landing_page.field_landing_page_hero_theme
 field_name: field_landing_page_hero_theme
 entity_type: node
 bundle: landing_page
-label: Theme
-description: ''
+label: Here image theme
+description: 'If your hero image is mostly dark, apply the dark theme. This changes how the page title is displayed.'
 required: false
 translatable: false
 default_value: {  }
