--- a/config/install/field.field.node.landing_page.field_show_content_rating.yml
+++ b/config/install/field.field.node.landing_page.field_show_content_rating.yml
@@ -8,8 +8,8 @@ id: node.landing_page.field_show_content_rating
 field_name: field_show_content_rating
 entity_type: node
 bundle: landing_page
-label: 'Show Content Rating?'
-description: 'Check this box if you want to show content ratings on this page.'
+label: 'Show Related Content?'
+description: 'Check this box to display related links on this page.'
 required: false
 translatable: true
 default_value:
