Updated paragraph labels introduced by SDPA-3620.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/config/install/paragraphs.paragraphs_type.introduction_banner.yml
+++ b/config/install/paragraphs.paragraphs_type.introduction_banner.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: introduction_banner
-label: 'Introduction Banner'
+label: 'Introduction banner'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
