Updated Node form for landing page.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
@@ -25,5 +25,5 @@ settings:
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: ''
+    auto_create_bundle: campaign
 field_type: entity_reference
