--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -42,29 +42,12 @@ dependencies:
     - content_moderation
     - entity_browser
     - field_group
-    - inline_entity_form
     - maxlength
     - metatag
     - paragraphs
     - path
 third_party_settings:
   field_group:
-    group_top_banner:
-      children:
-        - field_landing_page_c_primary
-        - field_show_c_primary_caption
-      parent_name: group_header_content
-      weight: 100
-      format_type: fieldset
-      format_settings:
-        description: ''
-        open: true
-        weight: '0'
-        required_fields: true
-        id: ''
-        classes: ''
-      label: 'Primary campaign'
-      region: content
     group_components:
       children:
         - field_show_table_of_content
@@ -87,14 +70,14 @@ third_party_settings:
         - field_related_links
       parent_name: group_sidebar
       weight: 10
-      format_type: fieldset
+      format_type: details
       format_settings:
         id: ''
         classes: ''
         formatter: closed
-        description: ''
+        description: 'Related pages can be linked from this sidebar.'
         required_fields: true
-        open: true
+        open: false
       label: 'Related links'
       region: content
     group_whats_next:
@@ -103,14 +86,14 @@ third_party_settings:
         - field_whats_next
       parent_name: group_sidebar
       weight: 20
-      format_type: fieldset
+      format_type: details
       format_settings:
         description: ''
         formatter: closed
         required_fields: true
         id: ''
         classes: ''
-        open: true
+        open: false
       label: 'What''s next'
       region: content
     group_contact_us:
@@ -119,14 +102,14 @@ third_party_settings:
         - field_landing_page_contact
       parent_name: group_sidebar
       weight: 30
-      format_type: fieldset
+      format_type: details
       format_settings:
         id: ''
         classes: ''
         formatter: closed
-        description: ''
+        description: 'Specific contact details - name, address, phone, email can be added in a block to the sidebar.'
         required_fields: false
-        open: true
+        open: false
       label: Contact
       region: content
     group_site_section_navigation:
@@ -135,32 +118,14 @@ third_party_settings:
         - field_landing_page_nav_title
       parent_name: group_sidebar
       weight: 0
-      format_type: fieldset
+      format_type: details
       format_settings:
-        description: ''
-        formatter: closed
+        description: 'Add a site-section navigation on the right-hand side of your site.'
         required_fields: true
         id: ''
         classes: ''
-        open: true
+        open: false
       label: 'Site-section navigation'
-      region: content
-    group_header_content:
-      children:
-        - field_landing_page_header
-        - field_show_ack_of_country
-        - group_top_banner
-        - group_top_banner
-      parent_name: group_section_content
-      weight: -78
-      format_type: tab
-      format_settings:
-        description: ''
-        formatter: closed
-        required_fields: true
-        id: ''
-        classes: ''
-      label: 'Top page feature'
       region: content
     group_section_header:
       label: 'Header Section'
@@ -168,6 +133,7 @@ third_party_settings:
       children:
         - group_header
         - group_customised_header
+        - group_header_addon
       format_type: tabs
       format_settings:
         direction: horizontal
@@ -205,7 +171,7 @@ third_party_settings:
         id: node-form-group-content-section
         classes: ''
       region: content
-      weight: -80
+      weight: -70
     group_section_sidebar:
       label: 'Sidebar Section'
       parent_name: ''
@@ -233,7 +199,7 @@ third_party_settings:
       region: content
       weight: -76
     group_sidebar:
-      label: 'Side bar'
+      label: Sidebar
       parent_name: group_section_sidebar
       children:
         - group_site_section_navigation
@@ -270,6 +236,73 @@ third_party_settings:
         classes: ''
       region: content
       weight: -98
+    group_header_addon:
+      label: 'Header add-on'
+      parent_name: group_section_header
+      children:
+        - field_landing_page_header
+        - field_show_ack_of_country
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -97
+    group_section_campaign:
+      label: 'Campaign Section'
+      parent_name: ''
+      children:
+        - group_campaign
+      format_type: tabs
+      format_settings:
+        direction: horizontal
+        id: node-form-group-page-campaign
+        classes: ''
+      region: content
+      weight: -90
+    group_campaign:
+      label: 'Page campaign'
+      parent_name: group_section_campaign
+      children:
+        - group_primary_campaign
+        - group_secondary_campaign
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -89
+    group_primary_campaign:
+      label: 'Primary campaign'
+      parent_name: group_campaign
+      children:
+        - field_landing_page_c_primary
+        - field_show_c_primary_caption
+      format_type: details
+      format_settings:
+        open: true
+        description: 'Primary campaigns display at the top of the page between the header section and the body content section. They span the full width of the content area. Start typing the name of your custom block component to display your campaign.'
+      region: content
+      weight: 0
+    group_secondary_campaign:
+      label: 'Secondary campaign'
+      parent_name: group_campaign
+      children:
+        - field_landing_page_c_secondary
+      format_type: details
+      format_settings:
+        open: true
+        description: 'Secondary campaign displays after the content area, just above the page footer. They span the full width of the content area. Start typing the name of your custom block component to display your campaign'
+      region: content
+      weight: 10
+_core:
+  default_config_hash: pN7fy_ZaJVA-sEQWPZUCiV_-5V5W_ZSuZ7Rbql6y5kg
 id: node.landing_page.default
 targetEntityType: node
 bundle: landing_page
@@ -303,7 +336,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_featured_image:
-    weight: -90
+    weight: -80
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -339,7 +372,7 @@ content:
     type: options_select
     region: content
   field_landing_page_c_primary:
-    weight: 40
+    weight: -89
     settings:
       match_operator: CONTAINS
       size: 60
@@ -349,7 +382,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_landing_page_c_secondary:
-    weight: 26
+    weight: -85
     settings:
       match_operator: CONTAINS
       size: 60
@@ -516,21 +549,15 @@ content:
     type: options_buttons
     region: content
   field_related_links:
-    type: paragraphs
+    type: entity_reference_paragraphs
     weight: 38
     settings:
       title: Link
       title_plural: Links
       edit_mode: closed
-      closed_mode: summary
-      autocollapse: none
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
-      closed_mode_threshold: 0
-      features:
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
     third_party_settings: {  }
     region: content
   field_show_ack_of_country:
@@ -541,7 +568,7 @@ content:
     type: boolean_checkbox
     region: content
   field_show_c_primary_caption:
-    weight: 41
+    weight: -88
     settings:
       display_label: true
     third_party_settings: {  }
