--- a/config/install/paragraphs.paragraphs_type.embedded_search_form.yml
+++ b/config/install/paragraphs.paragraphs_type.embedded_search_form.yml
@@ -2,7 +2,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: embedded_search_form
-label: 'Embedded search form'
+label: 'Search banner'
 icon_uuid: null
+icon_default: null
 description: ''
 behavior_plugins: {  }
