--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -28,6 +28,7 @@ dependencies:
     - field.field.node.landing_page.field_show_c_primary_caption
     - field.field.node.landing_page.field_show_content_rating
     - field.field.node.landing_page.field_show_hero_image_caption
+    - field.field.node.landing_page.field_show_introduction_text
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_site_section_nav
     - field.field.node.landing_page.field_show_social_sharing
@@ -147,6 +148,7 @@ third_party_settings:
       children:
         - title
         - field_landing_page_summary
+        - field_show_introduction_text
         - field_landing_page_intro_text
         - field_landing_page_key_journeys
       format_type: tab
@@ -381,6 +383,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+    description: 'Primary campaigns display at the top of the page between the header section and the body content section. They span the full width of the content area. Start typing the name of your custom block component to display your campaign.'
   field_landing_page_c_secondary:
     weight: -85
     settings:
@@ -574,6 +577,7 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+    description: 'Secondary campaign displays after the content area, just above the page footer. They span the full width of the content area. Start typing the name of your custom block component to display your campaign'
   field_show_content_rating:
     type: boolean_checkbox
     region: content
@@ -588,6 +592,12 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_show_introduction_text:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   field_show_related_content:
     weight: 37
