--- a/config/install/field.field.node.landing_page.field_show_introduction_text.yml
+++ b/config/install/field.field.node.landing_page.field_show_introduction_text.yml
@@ -18,5 +18,5 @@ default_value:
 default_value_callback: ''
 settings:
   on_label: 'Display Introduction text'
-  off_label: 'Turn off Introduction text'
+  off_label: 'Hide Introduction text'
 field_type: boolean
