Feature/SDPA-4660 navigation card (#114)
* [SDPA-4660] Added new navigation card paragraph type.

--- a/config/install/field.field.paragraph.navigation_card.field_customise.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_customise.yml
@@ -3,18 +3,18 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_customise
-    - paragraphs.paragraphs_type.promotion_card
-id: paragraph.promotion_card.field_customise
+    - paragraphs.paragraphs_type.navigation_card
+id: paragraph.navigation_card.field_customise
 field_name: field_customise
 entity_type: paragraph
-bundle: promotion_card
+bundle: navigation_card
 label: Customise
 description: 'Supplemental info will automatically display topic, date, or content type (depending on content being linked to).'
 required: false
-translatable: false
+translatable: true
 default_value:
   -
-    value: 1
+    value: 0
 default_value_callback: ''
 settings:
   on_label: 'Show supplemental info'
