--- a/config/install/field.field.paragraph.navigation_card.field_paragraph_link.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_paragraph_link.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_paragraph_link
-    - paragraphs.paragraphs_type.promotion_card
+    - paragraphs.paragraphs_type.navigation_card
   module:
     - link
     - link_field_autocomplete_filter
@@ -27,10 +27,10 @@ third_party_settings:
       translated_page: 0
       vada_profile: 0
       vdrp_profile: 0
-id: paragraph.promotion_card.field_paragraph_link
+id: paragraph.navigation_card.field_paragraph_link
 field_name: field_paragraph_link
 entity_type: paragraph
-bundle: promotion_card
+bundle: navigation_card
 label: Link
 description: ''
 required: true
