--- a/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
+++ b/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
@@ -3,23 +3,37 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.tide_image_browser
-    - field.field.paragraph.card_navigation_featured.field_paragraph_link
-    - field.field.paragraph.card_navigation_featured.field_paragraph_media
-    - field.field.paragraph.card_navigation_featured.field_paragraph_summary
-    - field.field.paragraph.card_navigation_featured.field_paragraph_title
-    - paragraphs.paragraphs_type.card_navigation_featured
+    - field.field.paragraph.navigation_card.field_nav_card_display_style
+    - field.field.paragraph.navigation_card.field_customise
+    - field.field.paragraph.navigation_card.field_paragraph_link
+    - field.field.paragraph.navigation_card.field_paragraph_media
+    - field.field.paragraph.navigation_card.field_paragraph_summary
+    - field.field.paragraph.navigation_card.field_paragraph_title
+    - paragraphs.paragraphs_type.navigation_card
   module:
-    - content_moderation
     - entity_browser
     - link
     - maxlength
-id: paragraph.card_navigation_featured.default
+id: paragraph.navigation_card.default
 targetEntityType: paragraph
-bundle: card_navigation_featured
+bundle: navigation_card
 mode: default
 content:
+  field_nav_card_display_style:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
+  field_customise:
+    weight: 5
+    settings:
+      display_label: false
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_paragraph_link:
-    weight: 4
+    weight: 0
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -27,50 +41,40 @@ content:
     type: link_default
     region: content
   field_paragraph_media:
-    weight: 3
+    weight: 4
     settings:
       entity_browser: tide_image_browser
-      field_widget_display: rendered_entity
+      field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
-      open: true
       selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: media_browser_preview
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_paragraph_summary:
-    type: string_textarea
     weight: 2
     settings:
       rows: 5
       placeholder: ''
     third_party_settings:
       maxlength:
-        maxlength_js: 200
+        maxlength_js: 300
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
         maxlength_js_enforce: false
         maxlength_js_truncate_html: false
+    type: string_textarea
     region: content
   field_paragraph_title:
     weight: 1
     settings:
       size: 60
       placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 150
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+    third_party_settings: {  }
     type: string_textfield
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 0
-    settings: {  }
-    region: content
-    third_party_settings: {  }
 hidden:
   created: true
   status: true
-  uid: true
