--- a/config/install/field.field.paragraph.navigation_card.field_paragraph_media.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_paragraph_media.yml
@@ -4,14 +4,14 @@ dependencies:
   config:
     - field.storage.paragraph.field_paragraph_media
     - media.type.image
-    - paragraphs.paragraphs_type.card_navigation_featured
-id: paragraph.card_navigation_featured.field_paragraph_media
+    - paragraphs.paragraphs_type.navigation_card
+id: paragraph.navigation_card.field_paragraph_media
 field_name: field_paragraph_media
 entity_type: paragraph
-bundle: card_navigation_featured
-label: Image
+bundle: navigation_card
+label: 'Image'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
