--- a/config/install/field.field.paragraph.navigation_card.field_paragraph_title.yml
+++ b/config/install/field.field.paragraph.navigation_card.field_paragraph_title.yml
@@ -3,14 +3,14 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_paragraph_title
-    - paragraphs.paragraphs_type.card_navigation_featured
-id: paragraph.card_navigation_featured.field_paragraph_title
+    - paragraphs.paragraphs_type.navigation_card
+id: paragraph.navigation_card.field_paragraph_title
 field_name: field_paragraph_title
 entity_type: paragraph
-bundle: card_navigation_featured
+bundle: navigation_card
 label: Title
-description: ''
-required: true
+description: 'This title will be displayed as the primary call-to-action on the card.'
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
