[SDPA-4667] adds promotion card paragraph type (#111)
* [SDPA-4667] adds promotion card paragraph type

--- a/config/install/paragraphs.paragraphs_type.navigation_card.yml
+++ b/config/install/paragraphs.paragraphs_type.navigation_card.yml
@@ -1,8 +1,9 @@
 langcode: en
 status: true
 dependencies: {  }
-id: card_navigation_auto
-label: 'Navigation Automated'
+id: navigation_card
+label: 'Navigation card'
 icon_uuid: null
+icon_default: null
 description: ''
 behavior_plugins: {  }
