--- a/config/install/field.field.paragraph.promotion_card.field_paragraph_summary.yml
+++ b/config/install/field.field.paragraph.promotion_card.field_paragraph_summary.yml
@@ -3,14 +3,14 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_paragraph_summary
-    - paragraphs.paragraphs_type.card_navigation
-id: paragraph.card_navigation.field_paragraph_summary
+    - paragraphs.paragraphs_type.promotion_card
+id: paragraph.promotion_card.field_paragraph_summary
 field_name: field_paragraph_summary
 entity_type: paragraph
-bundle: card_navigation
+bundle: promotion_card
 label: Summary
-description: ''
-required: true
+description: 'This optional summary will be shown underneath the title.'
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
