--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--promotion_card.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--promotion_card.yml
@@ -2,11 +2,11 @@ langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.card_navigation_featured
-id: paragraph--card_navigation_featured
+    - paragraphs.paragraphs_type.promotion_card
+id: paragraph--promotion_card
 disabled: false
-path: paragraph/card_navigation_featured
-resourceType: paragraph--card_navigation_featured
+path: paragraph/promotion_card
+resourceType: paragraph--promotion_card
 resourceFields:
   id:
     fieldName: id
@@ -14,165 +14,117 @@ resourceFields:
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   uuid:
     fieldName: uuid
     publicName: uuid
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   revision_id:
     fieldName: revision_id
     publicName: revision_id
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
-  type:
-    fieldName: type
-    publicName: entity_type
-    enhancer:
-      id: ''
-    disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   langcode:
     fieldName: langcode
     publicName: langcode
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
-  uid:
-    fieldName: uid
-    publicName: uid
+  type:
+    fieldName: type
+    publicName: type
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   status:
     fieldName: status
     publicName: status
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   created:
     fieldName: created
     publicName: created
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
-  revision_uid:
-    fieldName: revision_uid
-    publicName: revision_uid
-    enhancer:
-      id: ''
-    disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   parent_id:
     fieldName: parent_id
     publicName: parent_id
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   parent_type:
     fieldName: parent_type
     publicName: parent_type
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   parent_field_name:
     fieldName: parent_field_name
     publicName: parent_field_name
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   behavior_settings:
     fieldName: behavior_settings
     publicName: behavior_settings
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   default_langcode:
     fieldName: default_langcode
     publicName: default_langcode
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   revision_default:
     fieldName: revision_default
     publicName: revision_default
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   revision_translation_affected:
     fieldName: revision_translation_affected
     publicName: revision_translation_affected
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
-  moderation_state:
-    fieldName: moderation_state
-    publicName: moderation_state
+  field_promo_card_display_style:
+    fieldName: field_promo_card_display_style
+    publicName: field_promo_card_display_style
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
+  field_customise:
+    fieldName: field_customise
+    publicName: field_customise
+    enhancer:
+      id: ''
+    disabled: false
   field_paragraph_link:
     fieldName: field_paragraph_link
     publicName: field_paragraph_link
     enhancer:
-      id: link_enhancer
+      id: card_link_enhancer
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   field_paragraph_media:
     fieldName: field_paragraph_media
     publicName: field_paragraph_media
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   field_paragraph_summary:
     fieldName: field_paragraph_summary
     publicName: field_paragraph_summary
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
   field_paragraph_title:
     fieldName: field_paragraph_title
     publicName: field_paragraph_title
     enhancer:
       id: ''
     disabled: false
-    advancedOptionsIcon: ''
-    enhancer_label: ''
